Add default GC options for flink on yarn to facilitate debugging