@@ -178,6 +178,16 @@ public class YarnClusterDescriptorTest extends TestLogger {
 
 		final String java = "$JAVA_HOME/bin/java";
 		final String jvmmem = "-Xms424m -Xmx424m";
+		final String defaultJvmOpts =
+			"-Xloggc:" + ApplicationConstants.LOG_DIR_EXPANSION_VAR + "/gc.log " +
+			"-XX:+PrintGCApplicationStoppedTime " +
+			"-XX:+PrintGCDetails " +
+			"-XX:+PrintGCDateStamps " +
+			"-XX:+UseGCLogFileRotation " +
+			"-XX:NumberOfGCLogFiles=10 " +
+			"-XX:GCLogFileSize=10M " +
+			"-XX:+PrintPromotionFailure " +
+			"-XX:+PrintGCCause";
 		final String jvmOpts = "-Djvm"; // if set
 		final String jmJvmOpts = "-DjmJvm"; // if set
 		final String krb5 = "-Djava.security.krb5.conf=krb5.conf";
@@ -199,6 +209,7 @@ public class YarnClusterDescriptorTest extends TestLogger {
 			// no logging, with/out krb5
 			assertEquals(
 				java + " " + jvmmem +
+					" " + defaultJvmOpts +
 					" " + // jvmOpts
 					" " + // logging
 					" " + mainClass + " " + args + " " + redirects,
@@ -208,12 +219,14 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						false,
 						false,
 						false,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			assertEquals(
 				java + " " + jvmmem +
-					" " + " " + krb5 + // jvmOpts
+					" " + defaultJvmOpts +
+					" " + // jvmOpts
+					" " + krb5 +
 					" " + // logging
 					" " + mainClass + " " + args + " " + redirects,
 				clusterDescriptor
@@ -222,12 +235,13 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						false,
 						false,
 						true,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			// logback only, with/out krb5
 			assertEquals(
 				java + " " + jvmmem +
+					" " + defaultJvmOpts +
 					" " + // jvmOpts
 					" " + logfile + " " + logback +
 					" " + mainClass + " " + args + " " + redirects,
@@ -237,12 +251,14 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						true,
 						false,
 						false,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			assertEquals(
 				java + " " + jvmmem +
-					" " + " " + krb5 + // jvmOpts
+					" " + defaultJvmOpts +
+					" " + // jvmOpts
+					" " + krb5 +
 					" " + logfile + " " + logback +
 					" " + mainClass + " " + args + " " + redirects,
 				clusterDescriptor
@@ -251,12 +267,13 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						true,
 						false,
 						true,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			// log4j, with/out krb5
 			assertEquals(
 				java + " " + jvmmem +
+					" " + defaultJvmOpts +
 					" " + // jvmOpts
 					" " + logfile + " " + log4j +
 					" " + mainClass + " " + args + " " + redirects,
@@ -266,12 +283,14 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						false,
 						true,
 						false,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			assertEquals(
 				java + " " + jvmmem +
-					" " + " " + krb5 + // jvmOpts
+					" " + defaultJvmOpts +
+					" " + // jvmOpts
+					" " + krb5 +
 					" " + logfile + " " + log4j +
 					" " + mainClass + " " + args + " " + redirects,
 				clusterDescriptor
@@ -280,12 +299,13 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						false,
 						true,
 						true,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			// logback + log4j, with/out krb5
 			assertEquals(
 				java + " " + jvmmem +
+					" " + defaultJvmOpts +
 					" " + // jvmOpts
 					" " + logfile + " " + logback + " " + log4j +
 					" " + mainClass + " " + args + " " + redirects,
@@ -295,12 +315,14 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						true,
 						true,
 						false,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			assertEquals(
 				java + " " + jvmmem +
-					" " + " " + krb5 + // jvmOpts
+					" " + defaultJvmOpts +
+					" " + // jvmOpts
+					" " + krb5 +
 					" " + logfile + " " + logback + " " + log4j +
 					" " + mainClass + " " + args + " " + redirects,
 				clusterDescriptor
@@ -309,7 +331,7 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						true,
 						true,
 						true,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			// logback + log4j, with/out krb5, different JVM opts
@@ -318,7 +340,7 @@ public class YarnClusterDescriptorTest extends TestLogger {
 			cfg.setString(CoreOptions.FLINK_JVM_OPTIONS, jvmOpts);
 			assertEquals(
 				java + " " + jvmmem +
-					" " + jvmOpts +
+					" " + defaultJvmOpts + " " + jvmOpts +
 					" " + logfile + " " + logback + " " + log4j +
 					" " + mainClass + " " + args + " " + redirects,
 				clusterDescriptor
@@ -327,12 +349,12 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						true,
 						true,
 						false,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			assertEquals(
 				java + " " + jvmmem +
-					" " + jvmOpts + " " + krb5 + // jvmOpts
+					" " + defaultJvmOpts + " " + jvmOpts + " " + krb5 + // jvmOpts
 					" " + logfile + " " + logback + " " + log4j +
 					" " + mainClass + " " + args + " " + redirects,
 				clusterDescriptor
@@ -341,7 +363,7 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						true,
 						true,
 						true,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			// logback + log4j, with/out krb5, different JVM opts
@@ -349,7 +371,7 @@ public class YarnClusterDescriptorTest extends TestLogger {
 			cfg.setString(CoreOptions.FLINK_JM_JVM_OPTIONS, jmJvmOpts);
 			assertEquals(
 				java + " " + jvmmem +
-					" " + jvmOpts + " " + jmJvmOpts +
+					" " + defaultJvmOpts + " " + jvmOpts + " " + jmJvmOpts +
 					" " + logfile + " " + logback + " " + log4j +
 					" " + mainClass + " " + args + " " + redirects,
 				clusterDescriptor
@@ -358,12 +380,12 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						true,
 						true,
 						false,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			assertEquals(
 				java + " " + jvmmem +
-					" " + jvmOpts + " " + jmJvmOpts + " " + krb5 + // jvmOpts
+					" " + defaultJvmOpts + " " + jvmOpts + " " + jmJvmOpts + " " + krb5 + // jvmOpts
 					" " + logfile + " " + logback + " " + log4j +
 					" " + mainClass + " " + args + " " + redirects,
 				clusterDescriptor
@@ -372,7 +394,7 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						true,
 						true,
 						true,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			// now try some configurations with different yarn.container-start-command-template
@@ -381,7 +403,7 @@ public class YarnClusterDescriptorTest extends TestLogger {
 				"%java% 1 %jvmmem% 2 %jvmopts% 3 %logging% 4 %class% 5 %args% 6 %redirects%");
 			assertEquals(
 				java + " 1 " + jvmmem +
-					" 2 " + jvmOpts + " " + jmJvmOpts + " " + krb5 + // jvmOpts
+					" 2 " + defaultJvmOpts + " " + jvmOpts + " " + jmJvmOpts + " " + krb5 + // jvmOpts
 					" 3 " + logfile + " " + logback + " " + log4j +
 					" 4 " + mainClass + " 5 " + args + " 6 " + redirects,
 				clusterDescriptor
@@ -390,7 +412,7 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						true,
 						true,
 						true,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 
 			cfg.setString(ConfigConstants.YARN_CONTAINER_START_COMMAND_TEMPLATE,
@@ -399,7 +421,7 @@ public class YarnClusterDescriptorTest extends TestLogger {
 			assertEquals(
 				java +
 					" " + logfile + " " + logback + " " + log4j +
-					" " + jvmOpts + " " + jmJvmOpts + " " + krb5 + // jvmOpts
+					" " + defaultJvmOpts + " " + jvmOpts + " " + jmJvmOpts + " " + krb5 + // jvmOpts
 					" " + jvmmem +
 					" " + mainClass + " " + args + " " + redirects,
 				clusterDescriptor
@@ -408,7 +430,7 @@ public class YarnClusterDescriptorTest extends TestLogger {
 						true,
 						true,
 						true,
-						jobManagerMemory)
+						jobManagerMemory, null)
 					.getCommands().get(0));
 		} finally {
 			clusterDescriptor.close();
